// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tags should be styled by a css prop 1`] = `
.emotion-0 {
  background: hotpink;
}

.emotion-1 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  display: inline;
  margin: 0;
  margin: 0 0.4rem 0.4rem 0;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    Hello
  </div>
</div>
`;

exports[`Tags should match Tags styles 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  list-style: none;
  margin: 0;
  padding: 0;
  width: 100%;
}

.emotion-2 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  display: inline;
  margin: 0;
  margin: 0 0.4rem 0.4rem 0;
}

<div>
  <div>
    <ul
      class="Nautilus-List emotion-0"
    >
      <li
        class="Nautilus-ListItem emotion-1"
      >
        <div
          class="emotion-2"
          data-testid="child-one"
        >
          Hello
        </div>
      </li>
      <li
        class="Nautilus-ListItem emotion-1"
      >
        <div
          class="emotion-2"
          data-testid="child-two"
        >
          Goodbye
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Tags should match styles 1`] = `
.emotion-0 {
  font-family: -apple-system,BlinkMacSystemFont,San Francisco,Roboto,Segoe UI,Helvetica Neue,sans-serif;
  font-weight: 700;
  font-size: 1.5rem;
  line-height: 1.3333333333333333;
  letter-spacing: 0.05em;
  text-transform: uppercase;
  color: #666c76;
  display: inline;
  margin: 0;
  margin: 0 0.4rem 0.4rem 0;
}

<div>
  <div
    class="emotion-0"
  >
    hello
  </div>
</div>
`;
